--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         quod.
       </aside>
       <footer class="site-footer">
+        <img src="Apo.png" alt="Cello band" />
         <blockquote>
           <h2>footer</h2>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt aut
